--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+div{
+  width: 100%;
+  height: 100vh;
+  background-color: #8e44ad;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,h2,h3,h4,h5,h6{
+  color: #fff;
+  background: inherit;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
+}
+
+input{
+  width: 50%;
+  padding: 10px 20px ;
+  border: none;
+  outline: none;
+  margin: 20px 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  padding: 12px 20px;
+  background: #9b596b;
+  color: #fff;
+  border: 2px slid #ecf0f1;
+  outline: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form{
+  width: 1000px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
